--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,36 @@
-Flask
-Flask-Session
-psycopg2-binary
-SQLAlchemy
-python-dotenv
+asgiref==3.5.0
+autopep8==1.6.0
+bidict==0.22.0
+cachelib==0.6.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.1.0
+colorama==0.4.4
+Django==4.0.4
+django-admin-interface==0.19.0
+django-colorfield==0.6.3
+django-flat-responsive==2.0
+django-flat-theme==1.1.4
+Flask==2.1.0
+Flask-Login==0.6.1
+Flask-Session==0.4.0
+Flask-SocketIO==5.1.1
+greenlet==1.1.2
+idna==3.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+MarkupSafe==2.1.1
+Pillow==9.1.0
+psycopg2-binary==2.9.3
+pycodestyle==2.8.0
+python-dotenv==0.20.0
+python-engineio==4.3.1
+python-socketio==5.5.2
+requests==2.27.1
+six==1.16.0
+SQLAlchemy==1.4.32
+sqlparse==0.4.2
+toml==0.10.2
+tzdata==2022.1
+urllib3==1.26.9
+Werkzeug==2.1.0
